--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,5 @@
 !instances/_development/config-example/
 !instances/_development/config-vagrant/
 !instances/_development/config-travis-ci/
-!vagrant/
+.vagrant
 .DS_Store
