--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 !.gitignore
 !.gitmodules
 !system/
+!elms-styles/
+!elmsln-logos/
 !instances/
 !instances/_development/
 !instances/_development/config-example/
