Added ELMSLN Logos as submodule

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 !.gitmodules
 !system/
 !elms-styles
-!elmsln-logos/
+!elmsln-logos
 !instances/
 !instances/_development/
 !instances/_development/config-example/
